[package]
name = "cribbage"
version = "0.1.5"
authors = ["Zach Miller <25236373+zachmse@users.noreply.github.com>"]
edition = "2018"
description = "A (work-in-progress) implementation of the game Cribbage."
repository = "https://github.com/zachmse/cribbage"
readme = "README.md"
license = "MIT"
publish = false

[dependencies]
cribbage-core = "0.1.5"
futures = "0.3.15"
rand = "0.8.4"
tokio = { version = "1.7.0", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3.1"